--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -16,11 +16,22 @@
 // $body-color: white;
 // $link-hover-color: grey;
 // $font-family-sans-serif: "Helvetica Neue";
-
+$primary: #bf5700;
+$body-bg: #ededed;
 // Import Bootstrap styles:
 @import "../../node_modules/bootstrap/scss/bootstrap";
 
 // Import partials:
 
 // Custom styles:
+// highlight lead
+.highlight {
+  .lead {
+    font-weight: lighter;    
+  }
+}
 
+.caption {
+  font-weight: bold;
+  font-style: italic;
+}
